--- a/demos/landings.html
+++ b/demos/landings.html
@@ -99,12 +99,15 @@
          <span class="background dark" style="background-image:url('https://source.unsplash.com/C1HhAQrbykQ/')"></span>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap">
-            <h1 class="text-landing">Landings</h1>
-            <p class="text-symbols">* * * </p>
+            <h1 class="text-landing"> MZ세대를 위한 보험</h1>
+            <br/><br/>
+            <p class="text-symbols">NZLP</p>
+            <!--
             <p><a class="button ghost" href="https://github.com/webslides/webslides" title="Download WebSlides for free"><svg class="fa-github">
                 <use xlink:href="#fa-github"></use>
               </svg> WebSlides</a>
             </p>
+          -->
           </div>
           <!-- .end .wrap -->
         </section>
