--- a/demos/landings.html
+++ b/demos/landings.html
@@ -16,7 +16,7 @@
 
     <!-- SEO -->
     <title>WebSlides Landings: Create your web presence easily</title>
-    <meta name="description" content="WebSlides is the easiest way to create HTML presentations and landings. 120+ free slides ready to use.">
+    <meta name="description" content="MZ Project - NZLP">
 
     <!-- URL CANONICAL -->
     <!-- <link rel="canonical" href="http://your-url.com/permalink"> -->
@@ -102,12 +102,6 @@
             <h1 class="text-landing"> MZ세대를 위한 보험</h1>
             <br/><br/>
             <p class="text-symbols">NZLP</p>
-            <!--
-            <p><a class="button ghost" href="https://github.com/webslides/webslides" title="Download WebSlides for free"><svg class="fa-github">
-                <use xlink:href="#fa-github"></use>
-              </svg> WebSlides</a>
-            </p>
-          -->
           </div>
           <!-- .end .wrap -->
         </section>
@@ -118,84 +112,16 @@
             <div class="toc">
               <ol>
                 <li>
-                  <a href="#" title="Go to What is Beauty?"><span class="chapter">N Z L P</span>
-                  <span class="toc-page">08</span></a>
-                  <ol>
-                    <li><a href="#" title="Go to Harmony"><span class="chapter">팀원 소개</span>
-                      <span class="toc-page">12</span></a>
-                    </li>
-                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">How We Work?</span>
-                      <span class="toc-page">14</span></a>
-                    </li>
-                  </ol>
+                  <a href="#slide=3" title="NZLP"><span class="chapter">N Z L P</span>
+                  <span class="toc-page">01</span></a>
                 </li>
                 <li>
-                  <a href="#" title="Go to What is Beauty?"><span class="chapter">MZ 세대</span>
-                  <span class="toc-page">08</span></a>
-                  <ol>
-                    <li><a href="#" title="Go to Harmony"><span class="chapter">MZ 세대란?</span>
-                      <span class="toc-page">12</span></a>
-                    </li>
-                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">MZ 세대의 특징</span>
-                      <span class="toc-page">14</span></a>
-                    </li>
-                  </ol>
-                </li>
-
-                <li>
-                  <a href="#" title="Go to What is Beauty?"><span class="chapter">왜 성형수술 후유증 보험인가?</span>
-                  <span class="toc-page">08</span></a>
-                  <ol>
-                    <li><a href="#" title="Go to Harmony"><span class="chapter">성형수술 통계</span>
-                      <span class="toc-page">12</span></a>
-                    </li>
-                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">성형수술 부작용 통계</span>
-                      <span class="toc-page">14</span></a>
-                    </li>
-                  </ol>
+                  <a href="#" title="MZ 세대 마케팅"><span class="chapter">MZ 세대 마케팅</span>
+                  <span class="toc-page">02</span></a>
                 </li>
                 <li>
-                  <a href="#" title="Go to What is Beauty?"><span class="chapter">성형수술 후유증 보험 (안)</span>
-                  <span class="toc-page">08</span></a>
-                  <ol>
-                    <li><a href="#" title="Go to Harmony"><span class="chapter">마케팅 방안</span>
-                      <span class="toc-page">12</span></a>
-                    </li>
-                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">보장 내용 및 범위</span>
-                      <span class="toc-page">14</span></a>
-                    </li>
-                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">기대 효과</span>
-                      <span class="toc-page">14</span></a>
-                    </li>
-                  </ol>
-                </li>
-
-
-                <!--
-                <li>
-                  <a href="#" title="Go to Building a Culture"><span class="chapter">Building a Culture</span>
-                  <span class="toc-page">16</span></a>
-                  <ol>
-                    <li>
-                      <span class="chapter">Purpose</span>
-                      <span class="toc-page">17</span>
-                      <ol>
-                        <li>
-                          <span class="chapter">Valuable</span>
-                          <span class="toc-page">18</span>
-                          <ol>
-                            <li><span class="chapter">Easy</span>
-                              <span class="toc-page">20</span>
-                            </li>
-                            <li><span class="chapter">Elegant</span>
-                              <span class="toc-page">21</span>
-                            </li>
-                          </ol>
-                      </ol>
-                    </li>
-                  -->
-
-                  </ol>
+                  <a href="#" title="MZ 세대를 위한 보험"><span class="chapter">MZ 세대를 위한 보험</span>
+                  <span class="toc-page">03</span></a>
                 </li>
               </ol>
             </div>
@@ -204,10 +130,54 @@
           <!-- .end .wrap -->
         </section>
         <section>
+          <div class="wrap size-50">
+          <h3>N Z L P</h3>
+          <hr>
+            <div class="toc">
+              <ul>
+                <li>
+                  <a href="#" title="MZ 세대 마케팅"><span class="chapter">팀원 소개</span>
+                  <span class="toc-page">02</span></a>
+                </li>
+                <li>
+                  <a href="#" title="MZ 세대를 위한 보험"><span class="chapter">How We Work?</span>
+                  <span class="toc-page">03</span></a>
+                </li>
+              </ul>
+            </div>
+            <!-- end .toc -->
+          </div>
+          <!-- .end .wrap -->
+        </section>
+        <section>
+          <div class="wrap size-50">
+          <h3>MZ 세대 마케팅</h3>
+          <hr>
+            <div class="toc">
+              <ul>
+                <li>
+                  <a href="#slide=3" title="NZLP"><span class="chapter">N Z L P</span>
+                  <span class="toc-page">01</span></a>
+                </li>
+                <li>
+                  <a href="#" title="MZ 세대 마케팅"><span class="chapter">MZ 세대 마케팅</span>
+                  <span class="toc-page">02</span></a>
+                </li>
+                <li>
+                  <a href="#" title="MZ 세대를 위한 보험"><span class="chapter">MZ 세대를 위한 보험</span>
+                  <span class="toc-page">03</span></a>
+                </li>
+              </ul>
+            </div>
+            <!-- end .toc -->
+          </div>
+          <!-- .end .wrap -->
+        </section>
+        <section>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap aligncenter">
-            <p class="text-subtitle">앙고라는</p>
-            <h2>흡연자다!!</h2>
+            <p class="text-subtitle">헤더</p>
+            <h2>ㄴㅐ용</h2>
           </div>
           <!-- .end .wrap -->
         </section>
