--- a/demos/landings.html
+++ b/demos/landings.html
@@ -16,7 +16,7 @@
 
     <!-- SEO -->
     <title>WebSlides Landings: Create your web presence easily</title>
-    <meta name="description" content="MZ Project - NZLP">
+    <meta name="description" content="MZ Project - NZPL">
 
     <!-- URL CANONICAL -->
     <!-- <link rel="canonical" href="http://your-url.com/permalink"> -->
@@ -106,73 +106,92 @@
           <!-- .end .wrap -->
         </section>
         <section>
-          <div class="wrap size-50">
+          <div class="wrap size-40">
           <h3>Table of Contents</h3>
           <hr>
             <div class="toc">
               <ol>
                 <li>
-                  <a href="#slide=3" title="NZLP"><span class="chapter">N Z L P</span>
-                  <span class="toc-page">01</span></a>
+                  <a href="#" title="Go to What is Beauty?"><span class="chapter">N Z P L</span>
+                  <span class="toc-page">08</span></a>
+                  <ol>
+                    <li><a href="#" title="Go to Harmony"><span class="chapter">팀원 소개</span>
+                      <span class="toc-page">12</span></a>
+                    </li>
+                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">How We Work?</span>
+                      <span class="toc-page">14</span></a>
+                    </li>
+                  </ol>
                 </li>
                 <li>
-                  <a href="#" title="MZ 세대 마케팅"><span class="chapter">MZ 세대 마케팅</span>
-                  <span class="toc-page">02</span></a>
+                  <a href="#" title="Go to What is Beauty?"><span class="chapter">MZ 마케팅</span>
+                  <span class="toc-page">08</span></a>
+                  <ol>
+                    <li><a href="#" title="Go to Harmony"><span class="chapter">MZ 마케팅의 필요성</span>
+                      <span class="toc-page">12</span></a>
+                    </li>
+                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">타보험사의 MZ 마케팅 사례</span>
+                      <span class="toc-page">14</span></a>
+                    </li>
+                  </ol>
                 </li>
                 <li>
-                  <a href="#" title="MZ 세대를 위한 보험"><span class="chapter">MZ 세대를 위한 보험</span>
-                  <span class="toc-page">03</span></a>
+                  <a href="#" title="Go to What is Beauty?"><span class="chapter">MZ 세대를 위한 보험,성형 후유증 보험</span>
+                  <span class="toc-page">08</span></a>
+                  <ol>
+                    <li><a href="#" title="Go to Harmony"><span class="chapter">MZ 세대 분석</span>
+                      <span class="toc-page">12</span></a>
+                    </li>
+                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">성형수술/부작용 관련 통계</span>
+                      <span class="toc-page">14</span></a>
+                    </li>
+                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">성형 후유증 보험 [안]</span>
+                      <span class="toc-page">14</span></a>
+                    </li>
+                    <li><a href="#" title="Go to Simplicity vs. Clarity"><span class="chapter">상품 마케팅 방안</span>
+                      <span class="toc-page">14</span></a>
+                    </li>
+                  </ol>
                 </li>
+
+
+                <!--
+                <li>
+                  <a href="#" title="Go to Building a Culture"><span class="chapter">Building a Culture</span>
+                  <span class="toc-page">16</span></a>
+                  <ol>
+                    <li>
+                      <span class="chapter">Purpose</span>
+                      <span class="toc-page">17</span>
+                      <ol>
+                        <li>
+                          <span class="chapter">Valuable</span>
+                          <span class="toc-page">18</span>
+                          <ol>
+                            <li><span class="chapter">Easy</span>
+                              <span class="toc-page">20</span>
+                            </li>
+                            <li><span class="chapter">Elegant</span>
+                              <span class="toc-page">21</span>
+                            </li>
+                          </ol>
+                      </ol>
+                    </li>
+
+                    <li><span class="chapter">Principles</span>
+                      <span class="toc-page">24</span>
+                    </li>
+                    -->
+                  </ol>
+                </li>
+
               </ol>
             </div>
             <!-- end .toc -->
           </div>
           <!-- .end .wrap -->
         </section>
-        <section>
-          <div class="wrap size-50">
-          <h3>N Z L P</h3>
-          <hr>
-            <div class="toc">
-              <ul>
-                <li>
-                  <a href="#" title="MZ 세대 마케팅"><span class="chapter">팀원 소개</span>
-                  <span class="toc-page">02</span></a>
-                </li>
-                <li>
-                  <a href="#" title="MZ 세대를 위한 보험"><span class="chapter">How We Work?</span>
-                  <span class="toc-page">03</span></a>
-                </li>
-              </ul>
-            </div>
-            <!-- end .toc -->
-          </div>
-          <!-- .end .wrap -->
-        </section>
-        <section>
-          <div class="wrap size-50">
-          <h3>MZ 세대 마케팅</h3>
-          <hr>
-            <div class="toc">
-              <ul>
-                <li>
-                  <a href="#slide=3" title="NZLP"><span class="chapter">N Z L P</span>
-                  <span class="toc-page">01</span></a>
-                </li>
-                <li>
-                  <a href="#" title="MZ 세대 마케팅"><span class="chapter">MZ 세대 마케팅</span>
-                  <span class="toc-page">02</span></a>
-                </li>
-                <li>
-                  <a href="#" title="MZ 세대를 위한 보험"><span class="chapter">MZ 세대를 위한 보험</span>
-                  <span class="toc-page">03</span></a>
-                </li>
-              </ul>
-            </div>
-            <!-- end .toc -->
-          </div>
-          <!-- .end .wrap -->
-        </section>
+
         <section>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap aligncenter">
