--- a/demos/landings.html
+++ b/demos/landings.html
@@ -136,7 +136,7 @@
                   </ol>
                 </li>
                 <li>
-                  <a href="#" title="Go to What is Beauty?"><span class="chapter">MZ 세대를 위한 보험,성형 후유증 보험</span>
+                  <a href="#" title="Go to What is Beauty?"><span class="chapter">MZ 세대를 위한 성형 후유증 보험</span>
                   <span class="toc-page">08</span></a>
                   <ol>
                     <li><a href="#" title="Go to Harmony"><span class="chapter">MZ 세대 분석</span>
