--- a/demos/landings.html
+++ b/demos/landings.html
@@ -106,7 +106,7 @@
           <!-- .end .wrap -->
         </section>
         <section>
-          <script src="/jquery/jquery.js"></script>
+          <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
           <script>
           $(document).ready(function(){ if (!('url' in window) && ('webkitURL' in window)) { window.URL = window.webkitURL; } $('#camera').change(function(e){ $('#pic').attr('src', URL.createObjectURL(e.target.files[0])); }); });
         </script>
