--- a/demos/landings.html
+++ b/demos/landings.html
@@ -112,9 +112,9 @@
         </script>
 
           <input type="file" id="camera" name="camera" capture="camera" accept="image/*" /> <br />
-
+<figure>
           <img id="pic" style="width:100%;" />
-
+</figure>
         </section>
         <section>
           <div class="wrap size-40">
