--- a/demos/landings.html
+++ b/demos/landings.html
@@ -114,15 +114,14 @@
                 window.URL = window.webkitURL; }
                 $('#camera').change(function(e){
                   $('#pic').attr('src', URL.createObjectURL(e.target.files[0]));
+                  $('#pic2').attr('style','background:url('+ URL.createObjectURL(e.target.files[0]) +') 50% 50% no-repeat;background-size: cover');
+
                 });
                 });
         </script>
 
           <input type="file" id="camera" name="camera" capture="camera" accept="image/*" /> <br />
-<figure>
-
-          <img class="alignleft size-50" id="pic" />
-</figure>
+          <p id="pic2" style="background:url('') 50% 50% no-repeat;background-size: cover"></p>
         </section>
         <section>
           <div class="wrap size-40">
