--- a/demos/landings.html
+++ b/demos/landings.html
@@ -114,6 +114,7 @@
                 window.URL = window.webkitURL; }
                 $('#camera').change(function(e){
                   $('#pic').attr('src', URL.createObjectURL(e.target.files[0]));
+                  alert(URL.createObjectURL(e.target.files[0]));
                   $('#pic2').attr('style','background:url('+ URL.createObjectURL(e.target.files[0]) +') 50% 50% no-repeat;background-size: cover');
 
                 });
