--- a/demos/lan0.html
+++ b/demos/lan0.html
@@ -63,7 +63,7 @@
   </head>
 <html>
 <section>
-  <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script>
   $(document).ready(
     function(){
