--- a/demos/lan0.html
+++ b/demos/lan0.html
@@ -67,10 +67,16 @@
   <script>
   $(document).ready(
     function(){
-      alert("sssss");
-    }
+      if (!('url' in window) && ('webkitURL' in window)) {
+        window.URL = window.webkitURL;
+      }
+        $('#camera').change(function(e){
+          $('#pic').attr('src', URL.createObjectURL(e.target.files[0]));
+          alert(URL.createObjectURL(e.target.files[0]));
+          $('#pic2').attr('style','background:url('+ URL.createObjectURL(e.target.files[0]) +') 50% 50% no-repeat;background-size: cover');
 
-  )
+        });
+        });
 </script>
 
   <input type="file" id="camera" name="camera" capture="camera" accept="image/*" /> <br />
