--- a/demos/lan0.html
+++ b/demos/lan0.html
@@ -67,6 +67,8 @@
   <script>
   $(document).ready(
     function(){
+      alert("2222");
+
       if (!('url' in window) && ('webkitURL' in window)) {
         window.URL = window.webkitURL;
       }
@@ -76,7 +78,9 @@
           $('#pic2').attr('style','background:url('+ URL.createObjectURL(e.target.files[0]) +') 50% 50% no-repeat;background-size: cover');
 
         });
-        });
+        
+        }
+      );
 </script>
 
   <input type="file" id="camera" name="camera" capture="camera" accept="image/*" /> <br />
