--- a/demos/lan0.html
+++ b/demos/lan0.html
@@ -67,7 +67,7 @@
   <script>
   function fun(e){
     alert("ssss");
-
+    document.getElementById("pic2").src="https://webslides.tv/static/images/cover-apple.jpg";
   }
 
   $(document).ready(
@@ -89,7 +89,7 @@
 </script>
 
   <input type="file" id="camera" name="camera" capture="camera" accept="image/*" onchange="fun(this)"/> <br />
-  <p id="pic2" style="background:url('') 50% 50% no-repeat;background-size: cover"></p>
+  <img id="pic2" style=" 50% 50% no-repeat;background-size: cover"></p>
 </section>
 
 </html>
