--- a/demos/lan0.html
+++ b/demos/lan0.html
@@ -67,6 +67,7 @@
   <script>
   function fun(e){
     alert("ssss");
+    alert(URL.createObjectURL(e.target.files[0]));
     document.getElementById("pic2").src="https://webslides.tv/static/images/cover-apple.jpg";
   }
 
