--- a/demos/lan0.html
+++ b/demos/lan0.html
@@ -70,8 +70,10 @@
     if (!('url' in window) && ('webkitURL' in window)) {
       window.URL = window.webkitURL;
     }
+    var imgUrl=e.files[0];
     alert(URL.createObjectURL(e.files[0]));
     document.getElementById("pic2").src="https://webslides.tv/static/images/cover-apple.jpg";
+    document.getElementById("pic2").src=imgUrl;
   }
 
   $(document).ready(
