--- a/demos/landings.html
+++ b/demos/landings.html
@@ -3,25 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- CLEAN MARKUP = GOOD KARMA.
-      Hi source code lover,
-
-      you're a curious person and a fast learner ;)
-      Let's make something beautiful together. Contribute on Github:
-      https://github.com/webslides/webslides
-
-      Thanks!
-      -->
-
-    <!-- SEO -->
     <title>WebSlides Landings: Create your web presence easily</title>
     <meta name="description" content="MZ Project - NZPL">
-
-    <!-- URL CANONICAL -->
-    <!-- <link rel="canonical" href="http://your-url.com/permalink"> -->
-
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
     <!-- CSS Base -->
@@ -115,11 +98,10 @@
             document.getElementById("pic2").src=imgUrl;
           }
         </script>
-
-          <input type="file" id="camera" name="camera" capture="camera" accept="image/*" onchange="fun(this)"/> <br />
           <img id="pic2" style=" 30% 30% no-repeat;background-size: cover"></p>
+          <input type="file" id="camera" name="camera" capture="camera" accept="image/*" onchange="fun(this)"/> <br />
         </section>
-        
+
         <section>
           <div class="wrap size-40">
           <h3>Table of Contents</h3>
@@ -252,7 +234,7 @@
             <p>All content is for demo purposes only. </p>
             <hr>
             <ol class="text-cols">
-              <li><a target="_blank" href="#slide=5">Welcomes</a></li>
+              <li><a target="_blank" href="#slide=5" target="_self">Welcomes</a></li>
               <li><a target="_blank" href="#slide=12">Covers</a></li>
               <li><a target="_blank" href="#slide=21">Abouts & Teams</a></li>
               <li><a target="_blank" href="#slide=29">Features & Benefits</a></li>
