--- a/demos/landings.html
+++ b/demos/landings.html
@@ -234,7 +234,8 @@
             <p>All content is for demo purposes only. </p>
             <hr>
             <ol class="text-cols">
-              <li><a target="_blank" href="#slide=5" target="_self">Welcomes</a></li>
+
+              <li><a href="#slide=5" target="_self">Welcomes</a></li>
               <li><a target="_blank" href="#slide=12">Covers</a></li>
               <li><a target="_blank" href="#slide=21">Abouts & Teams</a></li>
               <li><a target="_blank" href="#slide=29">Features & Benefits</a></li>
