--- a/demos/landings.html
+++ b/demos/landings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebSlides Landings: Create your web presence easily</title>
+    <title>바른 얼굴보장 분석 서비스</title>
     <meta name="description" content="MZ Project - NZPL">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
@@ -82,9 +82,9 @@
          <span class="background dark" style="background-image:url('https://source.unsplash.com/C1HhAQrbykQ/')"></span>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap">
-            <h1 class="text-landing"> MZ세대를 위한 보험</h1>
+            <h1 class="text-landing"> 바른 얼굴보장 분석 서비스 </h1>
             <br/><br/>
-            <p class="text-symbols">NZLP</p>
+            <p class="text-symbols">NJLP</p>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -98,7 +98,9 @@
             document.getElementById("pic2").src=imgUrl;
           }
         </script>
-          <img id="pic2" style=" 30% 30% no-repeat;background-size: cover"></p>
+        <figure>
+          <img id="pic2" style=" 30% 30% no-repeat;background-size: cover">
+        </figure>
           <input type="file" id="camera" name="camera" capture="camera" accept="image/*" onchange="fun(this)"/> <br />
         </section>
 
@@ -229,12 +231,17 @@
           <!-- .end .wrap -->
         </section>
         <section>
+          <script>
+          function testfun(e){
+
+            location.href="https://heedojung92.github.io/MZProject/demos/landings#slide=2";
+          }
+          </script>
           <div class="wrap size-50">
             <h3>Let's check out some examples.</h3>
             <p>All content is for demo purposes only. </p>
             <hr>
             <ol class="text-cols">
-
               <li><a href="#slide=5" target="_self">Welcomes</a></li>
               <li><a target="_blank" href="#slide=12">Covers</a></li>
               <li><a target="_blank" href="#slide=21">Abouts & Teams</a></li>
