--- a/demos/landings.html
+++ b/demos/landings.html
@@ -88,6 +88,21 @@
           </div>
           <!-- .end .wrap -->
         </section>
+        <section class="bg-gradient-white">
+          <!--.wrap = container (width: 90%) -->
+          <div class="wrap">
+            <form action="/" method="post">
+              <fieldset>
+                <legend>Create a free account</legend>
+                <p><input type="text" tabindex="1" name="username" placeholder="Username" required></p>
+                <p><input type="email" tabindex="2" name="email" placeholder="your@email.com" required></p>
+                <p><input type="password" tabindex="3" name="password" placeholder="Password" required></p>
+                <p><button type="submit" tabindex="4" title="Sign Up">Sign Up &rsaquo;</button></p>
+              </fieldset>
+            </form>
+          </div>
+          <!-- .end .wrap -->
+        </section>
         <section>
           <script>
           function fun(e){
