--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -78,7 +78,7 @@
           </div>
           <script>
           function getStarted(){
-            self.location.href="file:///Users/heedojung/Desktop/MZProject/demos/facial_analysis.html#slide=3"
+            self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis#slide=3"
           }
           </script>
 
@@ -121,7 +121,7 @@
               }else{
                 document.getElementById("q2_text").innerHTML = "모공이 눈으로 잘 보이는 크기에요";
               }
-              self.location.href="file:///Users/heedojung/Desktop/MZProject/demos/facial_analysis.html#slide=5";
+              self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis#slide=5";
 
             }
           </script>
@@ -155,7 +155,7 @@
                   document.getElementById("q3_text").innerHTML = "얼굴 전반에 피지가 많고 번들거려요";
                 }
               }
-              self.location.href="file:///Users/heedojung/Desktop/MZProject/demos/facial_analysis.html#slide=6";
+              self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis#slide=6";
 
             }
           </script>
@@ -172,88 +172,6 @@
                <ul>
                  <li><a href="#slide=5" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
                  <li><a href="#slide=6" target="_self"><strong>아니오 &nbsp; &rsaquo;</strong></a></li>
-               </ul>
-             </nav>
-          </div>
-        </section>
-
-
-
-        <section class="aligncenter">
-          <!--.wrap = container (width: 90%)  slide:5 -->
-          <div class="wrap size-50">
-
-            <h4 class="text-landing">Q2</h4>
-            <p class="text-intro"><br><strong> 모공이 작은편이고 눈에 잘 안보여요 </strong><br>
-            </p>
-             <nav class="aligncenter">
-               <ul>
-                 <li><a href="#slide=7" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
-                 <li><a href="#slide=8" target="_self"><strong>아니오 &nbsp; &rsaquo;</strong></a></li>
-               </ul>
-             </nav>
-          </div>
-        </section>
-
-        <section class="aligncenter">
-          <!--.wrap = container (width: 90%)  slide:6 -->
-          <div class="wrap size-50">
-
-            <h4 class="text-landing">Q2</h4>
-            <p class="text-intro"><br><strong> 모공이 눈으로 잘 보이는 크기에요 </strong><br>
-            </p>
-             <nav class="aligncenter">
-               <ul>
-                 <li><a href="#slide=8" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
-                 <li><a href="#slide=9" target="_self"><strong>아니오 &nbsp; &rsaquo;</strong></a></li>
-               </ul>
-             </nav>
-          </div>
-        </section>
-
-        <section class="aligncenter">
-          <!--.wrap = container (width: 90%)  slide:7 -->
-          <div class="wrap size-50">
-
-            <h4 class="text-landing">Q3</h4>
-            <p class="text-intro"><br><strong> 화장품을 바를 때 건조할까봐 많은 양을 발라요 </strong><br>
-            </p>
-             <nav class="aligncenter">
-               <ul>
-                 <li><a href="#slide=5" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
-                 <li><a href="https://twitter.com/webslides">아니오 &nbsp; &rsaquo;</a></li>
-               </ul>
-             </nav>
-          </div>
-        </section>
-
-        <section class="aligncenter">
-          <!--.wrap = container (width: 90%)  slide:8 -->
-          <div class="wrap size-50">
-
-            <h4 class="text-landing">Q3</h4>
-            <p class="text-intro"><br><strong> 좁쌀여드름과 아픈 염증성 여드름이 자주 나요 </strong><br>
-            </p>
-             <nav class="aligncenter">
-               <ul>
-                 <li><a href="#slide=5" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
-                 <li><a href="https://twitter.com/webslides">아니오 &nbsp; &rsaquo;</a></li>
-               </ul>
-             </nav>
-          </div>
-        </section>
-
-        <section class="aligncenter">
-          <!--.wrap = container (width: 90%)  slide:9 -->
-          <div class="wrap size-50">
-
-            <h4 class="text-landing">Q3</h4>
-            <p class="text-intro"><br><strong> 얼굴 전반에 피지가 많고 번들거려요 </strong><br>
-            </p>
-             <nav class="aligncenter">
-               <ul>
-                 <li><a href="#slide=5" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
-                 <li><a href="https://twitter.com/webslides">아니오 &nbsp; &rsaquo;</a></li>
                </ul>
              </nav>
           </div>
